syntax = "proto3";

service ProtoHubService {

  rpc UploadSpec (UploadSpecRequest) returns (UploadSpecResponseResponse);

}

message UploadSpecRequest {
  string package_name = 1;
  string secret_token = 2;
  string version_semver = 3;
  bytes payload = 4;
}

message UploadSpecResponse {
    Error
    bytes payload = 4;
  }